--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
